# proyecto2_raycasting

./: .gitignore  Cargo.toml  ESTADO_FINAL.md  MEJORAS_PAISAJE.md  PAISAJE_COMPLETO_SOLUCION.md  PROYECTO_COMPLETO.md  PROYECTO_RAYLIB.md  PROYECTO_RESUMEN.md  README.md  README_NUEVO.md  SOLUCION_IMPLEMENTADA.md  ZOOM_GRANDISIMO.md  generar_animacion.bat  generar_gif.bat  generar_gif.ps1  generar_video.ps1  limpiar_imagenes.bat  regenerar_todo.bat
src/: camara.rs  escena.rs  geometria.rs  iluminacion.rs  main.rs  materiales.rs  materiales_backup.rs  preview_rapido.rs  texturas.rs  vistas_multiples.rs
