[package]
name = "diorama_raytracing"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "0.32"
image = "0.24"
rand = "0.8"
rayon = "1.7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "diorama"
path = "src/main.rs"

[[bin]]
name = "vistas_multiples"
path = "src/vistas_multiples.rs"

[[bin]]
name = "preview_rapido"
path = "src/preview_rapido.rs"